--- a/EstadosdePagos.csproj
+++ b/EstadosdePagos.csproj
@@ -129,6 +129,12 @@
     <Compile Include="Informes\FrmVisualizador.Designer.cs">
       <DependentUpon>FrmVisualizador.cs</DependentUpon>
     </Compile>
+    <Compile Include="Informes\Frm_Tmp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Informes\Frm_Tmp.Designer.cs">
+      <DependentUpon>Frm_Tmp.cs</DependentUpon>
+    </Compile>
     <Compile Include="Informes\Informes.cs" />
     <Compile Include="Informes\MestroDetalleDesp.cs">
       <AutoGen>True</AutoGen>
@@ -200,6 +206,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Informes\FrmVisualizador.resx">
       <DependentUpon>FrmVisualizador.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Informes\Frm_Tmp.resx">
+      <DependentUpon>Frm_Tmp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Informes\MestroDetalleDesp.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
@@ -304,6 +313,9 @@
       <DependentUpon>Reference.map</DependentUpon>
     </None>
     <None Include="Web References\WsOperacion\Despacho_Camion.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\WsOperacion\EP_Generado.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
     <None Include="Web References\WsOperacion\Estado_Pago.datasource">
