--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -2,14 +2,14 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="EstadosdePagos.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="EstadosdePagos_WsSesion_Sesion1" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://localhost:55038/ws/ws_sesion.asmx</Value>
-    </Setting>
     <Setting Name="EstadosdePagos_WsMensajeria_Ws_To" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://localhost:55038/WS/Ws_To.asmx</Value>
+      <Value Profile="(Default)">http://cubigest.torresocaranza.cl/Test/WS/Ws_To.asmx</Value>
     </Setting>
     <Setting Name="EstadosdePagos_WsOperacion_Operacion" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">http://localhost:55038/WS/Operacion.asmx</Value>
+    </Setting>
+    <Setting Name="EstadosdePagos_WsSesion_Sesion1" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://cubigest.torresocaranza.cl/Test/ws/ws_sesion.asmx</Value>
     </Setting>
   </Settings>
 </SettingsFile>
