--- a/app.config
+++ b/app.config
@@ -1,21 +1,25 @@
 <?xml version="1.0"?>
 <configuration>
 <configSections>
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-        <section name="EstadosdePagos.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+        <section name="EstadosdePagos.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
     </sectionGroup>
 </configSections>
-<startup><supportedRuntime version="v2.0.50727"/></startup><applicationSettings>
+  <appSettings>
+    <add key="PathLocal" value="C:\TMP\Estado de pago\DOC\"/>
+  </appSettings> 
+  
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><applicationSettings>
         <EstadosdePagos.Properties.Settings>
-            <setting name="EstadosdePagos_WsSesion_Sesion1" serializeAs="String">
-                <value>http://localhost:55038/ws/ws_sesion.asmx</value>
-            </setting>
-            <setting name="EstadosdePagos_WsMensajeria_Ws_To" serializeAs="String">
-                <value>http://localhost:55038/WS/Ws_To.asmx</value>
-            </setting>
-            <setting name="EstadosdePagos_WsOperacion_Operacion" serializeAs="String">
-                <value>http://localhost:55038/WS/Operacion.asmx</value>
-            </setting>
+          <setting name="EstadosdePagos_WsMensajeria_Ws_To" serializeAs="String">
+            <value>http://cubigest.torresocaranza.cl/Test/WS/Ws_To.asmx</value>
+          </setting>
+          <setting name="EstadosdePagos_WsOperacion_Operacion" serializeAs="String">
+            <value>http://cubigest.torresocaranza.cl/Test/WS/Operacion.asmx</value>
+          </setting>
+          <setting name="EstadosdePagos_WsSesion_Sesion1" serializeAs="String">
+            <value>http://cubigest.torresocaranza.cl/Test/ws/ws_sesion.asmx</value>
+          </setting>
         </EstadosdePagos.Properties.Settings>
     </applicationSettings>
 </configuration>
