Por paso a Produccion

--- a/app.config
+++ b/app.config
@@ -12,13 +12,13 @@
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><applicationSettings>
         <EstadosdePagos.Properties.Settings>
           <setting name="EstadosdePagos_WsMensajeria_Ws_To" serializeAs="String">
-            <value>http://cubigest.torresocaranza.cl/Pruebas/WS/Ws_To.asmx</value>
+            <value>http://cubigest.torresocaranza.cl/Test/WS/Ws_To.asmx</value>
           </setting>
           <setting name="EstadosdePagos_WsOperacion_Operacion" serializeAs="String">
-            <value>http://cubigest.torresocaranza.cl/Pruebas/WS/Operacion.asmx</value>
+            <value>http://cubigest.torresocaranza.cl/Test/WS/Operacion.asmx</value>
           </setting>
           <setting name="EstadosdePagos_WsSesion_Sesion1" serializeAs="String">
-            <value>http://cubigest.torresocaranza.cl/Pruebas/ws/ws_sesion.asmx</value>
+            <value>http://cubigest.torresocaranza.cl/Test/ws/ws_sesion.asmx</value>
           </setting>
         </EstadosdePagos.Properties.Settings>
     </applicationSettings>
