--- a/app.config
+++ b/app.config
@@ -1,25 +1,40 @@
 <?xml version="1.0"?>
 <configuration>
-<configSections>
+  <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-        <section name="EstadosdePagos.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+      <section name="EstadosdePagos.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
-</configSections>
+  </configSections>
   <appSettings>
-    <add key="PathLocal" value="C:\TMP\Estado de pago\DOC\"/>
-  </appSettings> 
-  
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><applicationSettings>
-        <EstadosdePagos.Properties.Settings>
-          <setting name="EstadosdePagos_WsMensajeria_Ws_To" serializeAs="String">
-            <value>http://cubigest.torresocaranza.cl/Test/WS/Ws_To.asmx</value>
-          </setting>
-          <setting name="EstadosdePagos_WsOperacion_Operacion" serializeAs="String">
-            <value>http://cubigest.torresocaranza.cl/Test/WS/Operacion.asmx</value>
-          </setting>
-          <setting name="EstadosdePagos_WsSesion_Sesion1" serializeAs="String">
-            <value>http://cubigest.torresocaranza.cl/Test/ws/ws_sesion.asmx</value>
-          </setting>
-        </EstadosdePagos.Properties.Settings>
-    </applicationSettings>
+    <add key="PathLocal" value="C:\TMP\Estado de pago\DOC\" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+  </startup>
+  <applicationSettings>
+    <EstadosdePagos.Properties.Settings>
+      <setting name="EstadosdePagos_WsMensajeria_Ws_To" serializeAs="String">
+        <value>http://cubigest.torresocaranza.cl/Pruebas/WS/Ws_To.asmx</value>
+      </setting>
+      <setting name="EstadosdePagos_WsSesion_Sesion1" serializeAs="String">
+        <value>http://cubigest.torresocaranza.cl/Pruebas/ws/ws_sesion.asmx</value>
+      </setting>
+      <setting name="EstadosdePagos_WsOperacion_Operacion" serializeAs="String">
+        <value>http://localhost:55038/WS/Operacion.asmx</value>
+      </setting>
+    </EstadosdePagos.Properties.Settings>
+  </applicationSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
