--- a/app.config
+++ b/app.config
@@ -21,7 +21,7 @@
         <value>http://cubigest.torresocaranza.cl/Pruebas/ws/ws_sesion.asmx</value>
       </setting>
       <setting name="EstadosdePagos_WsOperacion_Operacion" serializeAs="String">
-        <value>http://localhost:55038/WS/Operacion.asmx</value>
+        <value>http://cubigest.torresocaranza.cl/Pruebas/WS/Operacion.asmx</value>
       </setting>
     </EstadosdePagos.Properties.Settings>
   </applicationSettings>
