Avance de Proyecto..

--- a/app.config
+++ b/app.config
@@ -18,7 +18,7 @@
         <value>http://cubigest.torresocaranza.cl/Pruebas/WS/Ws_To.asmx</value>
       </setting>
       <setting name="EstadosdePagos_WsSesion_Sesion1" serializeAs="String">
-        <value>http://cubigest.torresocaranza.cl/Pruebas/ws/ws_sesion.asmx</value>
+        <value>http://cubigest.torresocaranza.cl/Pruebas/WS/ws_sesion.asmx</value>
       </setting>
       <setting name="EstadosdePagos_WsOperacion_Operacion" serializeAs="String">
         <value>http://cubigest.torresocaranza.cl/Pruebas/WS/Operacion.asmx</value>
