--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -3,13 +3,13 @@
   <Profiles />
   <Settings>
     <Setting Name="EstadosdePagos_WsMensajeria_Ws_To" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://cubigest.torresocaranza.cl/Test/WS/Ws_To.asmx</Value>
+      <Value Profile="(Default)">http://cubigest.torresocaranza.cl/Pruebas/WS/Ws_To.asmx</Value>
     </Setting>
     <Setting Name="EstadosdePagos_WsSesion_Sesion1" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://cubigest.torresocaranza.cl/Test/ws/ws_sesion.asmx</Value>
+      <Value Profile="(Default)">http://cubigest.torresocaranza.cl/Pruebas/WS/ws_sesion.asmx</Value>
     </Setting>
     <Setting Name="EstadosdePagos_WsOperacion_Operacion" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://cubigest.torresocaranza.cl/Test/WS/Operacion.asmx</Value>
+      <Value Profile="(Default)">http://localhost:55038/WS/Operacion.asmx</Value>
     </Setting>
   </Settings>
 </SettingsFile>
