--- a/app.config
+++ b/app.config
@@ -15,13 +15,13 @@
   <applicationSettings>
     <EstadosdePagos.Properties.Settings>
       <setting name="EstadosdePagos_WsMensajeria_Ws_To" serializeAs="String">
-        <value>http://cubigest.torresocaranza.cl/Pruebas/WS/Ws_To.asmx</value>
+        <value>http://localhost:55038/WS/Ws_To.asmx</value>
       </setting>
       <setting name="EstadosdePagos_WsSesion_Sesion1" serializeAs="String">
-        <value>http://cubigest.torresocaranza.cl/Pruebas/WS/ws_sesion.asmx</value>
+        <value>http://localhost:55038/WS/ws_sesion.asmx</value>
       </setting>
       <setting name="EstadosdePagos_WsOperacion_Operacion" serializeAs="String">
-        <value>http://cubigest.torresocaranza.cl/Pruebas/WS/Operacion.asmx</value>
+        <value>http://localhost:55038/WS/Operacion.asmx</value>
       </setting>
     </EstadosdePagos.Properties.Settings>
   </applicationSettings>
