--- a/EstadosdePagos.csproj
+++ b/EstadosdePagos.csproj
@@ -234,6 +234,12 @@
     <Compile Include="Models\CurrentUser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Pruebas\FrmExcel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Pruebas\FrmExcel.Designer.cs">
+      <DependentUpon>FrmExcel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Result.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="Web References\WsMensajeria\Reference.cs">
@@ -318,6 +324,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Pruebas\FrmExcel.resx">
+      <DependentUpon>FrmExcel.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
