Cierre de Version

--- a/app.config
+++ b/app.config
@@ -16,13 +16,13 @@
   <applicationSettings>
     <EstadosdePagos.Properties.Settings>
       <setting name="EstadosdePagos_WsMensajeria_Ws_To" serializeAs="String">
-        <value>http://cubigest.torresocaranza.cl/pruebas/WS/Ws_To.asmx</value>
+        <value>http://cubigest.torresOcaranza.cl/pruebas/WS/Ws_To.asmx</value>
       </setting>
       <setting name="EstadosdePagos_WsSesion_Sesion1" serializeAs="String">
-        <value>http://cubigest.torresocaranza.cl/pruebas/ws/ws_sesion.asmx</value>
+        <value>http://cubigest.torresOcaranza.cl/pruebas/ws/ws_sesion.asmx</value>
       </setting>
       <setting name="EstadosdePagos_WsOperacion_Operacion" serializeAs="String">
-        <value>http://cubigest.torresocaranza.cl/pruebas/WS/Operacion.asmx</value>
+        <value>http://cubigest.torresOcaranza.cl/pruebas/WS/Operacion.asmx</value>
       </setting>
     </EstadosdePagos.Properties.Settings>
   </applicationSettings>
