--- a/app.config
+++ b/app.config
@@ -6,7 +6,7 @@
     </sectionGroup>
   </configSections>
   <appSettings>
-    <add key="IncluyeGuiasPdf" value="N" />
+    <add key="IncluyeGuiasPdf" value="S" />
     <add key="PathLocal" value="C:\TMP\Estado de pago\DOC\" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
@@ -16,13 +16,13 @@
   <applicationSettings>
     <EstadosdePagos.Properties.Settings>
       <setting name="EstadosdePagos_WsMensajeria_Ws_To" serializeAs="String">
-        <value>http://cubigest.torresOcaranza.cl/pruebas/WS/Ws_To.asmx</value>
+        <value>http://192.168.1.191/Test/WS/Ws_To.asmx</value>
       </setting>
       <setting name="EstadosdePagos_WsSesion_Sesion1" serializeAs="String">
-        <value>http://cubigest.torresOcaranza.cl/pruebas/ws/ws_sesion.asmx</value>
+        <value>http://192.168.1.191/Test/ws/ws_sesion.asmx</value>
       </setting>
       <setting name="EstadosdePagos_WsOperacion_Operacion" serializeAs="String">
-        <value>http://cubigest.torresOcaranza.cl/pruebas/WS/Operacion.asmx</value>
+        <value>http://192.168.1.191/Test/WS/Operacion.asmx</value>
       </setting>
     </EstadosdePagos.Properties.Settings>
   </applicationSettings>
