--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -9,7 +9,7 @@
       <Value Profile="(Default)">http://cubigest.torresocaranza.cl/pruebas/ws/ws_sesion.asmx</Value>
     </Setting>
     <Setting Name="EstadosdePagos_WsOperacion_Operacion" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://cubigest.torresOcaranza.cl/pruebas/WS/Operacion.asmx</Value>
+      <Value Profile="(Default)">http://192.168.1.191/test/WS/Operacion.asmx</Value>
     </Setting>
   </Settings>
 </SettingsFile>
