--- a/app.config
+++ b/app.config
@@ -16,13 +16,13 @@
   <applicationSettings>
     <EstadosdePagos.Properties.Settings>
       <setting name="EstadosdePagos_WsMensajeria_Ws_To" serializeAs="String">
-        <value>http://192.168.1.191/produccion/WS/Ws_To.asmx</value>
+        <value>http://192.168.1.195/WS/Ws_To.asmx</value>
       </setting>
       <setting name="EstadosdePagos_WsSesion_Sesion1" serializeAs="String">
-        <value>http://192.168.1.191/produccion/ws/ws_sesion.asmx</value>
+        <value>http://192.168.1.195/WS/ws_sesion.asmx</value>
       </setting>
       <setting name="EstadosdePagos_WsOperacion_Operacion" serializeAs="String">
-        <value>http://192.168.1.191/test/WS/Operacion.asmx</value>
+        <value>http://localhost:55038/WS/Operacion.asmx</value>
       </setting>
     </EstadosdePagos.Properties.Settings>
   </applicationSettings>
