--- a/app.config
+++ b/app.config
@@ -22,7 +22,7 @@
         <value>http://192.168.1.195/WS/ws_sesion.asmx</value>
       </setting>
       <setting name="EstadosdePagos_WsOperacion_Operacion" serializeAs="String">
-        <value>http://localhost:55038/WS/Operacion.asmx</value>
+        <value>http://192.168.1.195/WS/Operacion.asmx</value>
       </setting>
     </EstadosdePagos.Properties.Settings>
   </applicationSettings>
